2010-09-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::IsLeadChar): Also include PHINTHU,
	NIKHAHIT and YAMAKKAN in non-leading char list.

2009-04-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Post-release version suffix added.
	* src/wordseg.cpp (main, +Version): Add -V/--version to print version
	info, as suggested by Beamer User.
	* src/Makefile.am: Pass -DVERSION CFLAGS.

2009-04-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in, NEWS:
	=== Version 0.4.0 ===

2009-04-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterrtf.h (FilterRTF::chgCharState, FilterRTF::isThaiChar):
	Declare utility functions as static members.

2009-04-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.cpp (WinMacNormal, MacOffsetLeft, MacOffsetLeftHigh,
	MacOffsetNormal, WinOffsetLeft, WinOffsetLeftHigh, WinOffsetNormal):
	Declare internal data as file-scoped.

	* src/filterlatex.h
	(FilterLatex::isLongTailChar, FilterLatex::idxVowelToneMark):
	Declare utility functions as static members.

	* src/filterlatex.cpp (FilterLatex::isLongTailChar):
	Eliminate unnecessary true/false conditional expression; simple boolean
	expression is enough.

	* src/filterlatex.cpp (FilterLatex::idxVowelToneMark):
	Check array index range before accessing, rather than after.

2009-04-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/maxwordseg.cpp (MaxWordSeg::CreateSentence):
	Check array index range before accessing, rather than after.

2009-04-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/longwordseg.cpp (LongWordSeg::LongWordSeg):
	Use 'delete[]' instead of 'delete', to match with 'new []', fixing
	valgrind warning.

	* src/longwordseg.cpp (LongWordSeg::CreateSentence):
	Check array index range before accessing, rather than after, fixing
	valgrind warnings of conditional jumps depending on uninitialized
	values.
